Routing changes are made and mistakes corrected

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "developer-projects",
-  "homepage": "http://agabunia.github.io/developer-project/",
+  "homepage": "https://agabunia.github.io/developer-project/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
